# app/Http/Controllers/MessageController.php
@@ -6,6 +6,7 @@ use App\Events\MessageBroadcast;
 use App\Http\Requests\Conversation\StoreConversationRequest;
 use App\Http\Requests\Message\StoreMessageRequest;
 use App\Models\Conversation;
+use App\Models\Message;
 use App\Services\SwapMessageService;
 use Illuminate\Http\Request;
 
@@ -105,6 +106,87 @@ class MessageController extends Controller
         return response()->json(['success' => true, 'message' => 'Conversation started successfully']);
     }
 
+    /**
+     * Send Message.
+     *
+     *
+     * @OA\Post (path="/api/send-messages",
+     *     tags={"Message"},
+     *     security={{ "apiAuth": {} }},
+     *
+     *
+     *     @OA\Parameter(
+     *         in="query",
+     *         name="reciver_id",
+     *         required=true,
+     *
+     *         @OA\Schema(type="string"),
+     *         example="Doel Rana",
+     *     ),
+     *          @OA\Parameter(
+     *          in="query",
+     *          name="sender_id",
+     *          required=true,
+     *
+     *          @OA\Schema(type="integer"),
+     *          example="1",
+     *      ),
+     *          @OA\Parameter(
+     *          in="query",
+     *          name="swap_id",
+     *          required=true,
+     *
+     *          @OA\Schema(type="integer"),
+     *          example="2",
+     *      ),
+     *          @OA\Parameter(
+     *          in="query",
+     *          name="conversation_type",
+     *          required=true,
+     *
+     *          @OA\Schema(type="string"),
+     *          example="private",
+     *      ),
+     *           @OA\Parameter(
+     *           in="query",
+     *           name="conversation_id",
+     *           required=true,
+     *
+     *           @OA\Schema(type="integer"),
+     *           example="2",
+     *       ),
+     *           @OA\Parameter(
+     *            in="query",
+     *            name="message",
+     *            required=true,
+     *
+     *            @OA\Schema(type="text"),
+     *            example="2",
+     *        ),
+     *
+     *      @OA\Response(
+     *          response=200,
+     *          description="success",
+     *
+     *          @OA\JsonContent(
+     *
+     *              @OA\Property(property="success", type="boolean", example="true"),
+     *               @OA\Property(property="errors", type="json", example={"message": {"Message Sent successfully."}}),
+     *          ),
+     *      ),
+     *
+     *      @OA\Response(
+     *          response=422,
+     *          description="Invalid data",
+     *
+     *          @OA\JsonContent(
+     *
+     *              @OA\Property(property="success", type="boolean", example="false"),
+     *              @OA\Property(property="errors", type="json", example={"message": {"The given data was invalid."}}),
+     *          )
+     *      )
+     * )
+     */
     public function sendMessages(StoreMessageRequest $messageRequest)
     {
         $conversation = Conversation::whereHas('participants', function ($query) use ($messageRequest) {
@@ -197,7 +279,137 @@ class MessageController extends Controller
         $conversation = $conversation->paginate($request->pagination ?? self::PER_PAGE);
 
         return response()->json(['success' => true, 'data' => $conversation]);
+    }
 
+    /**
+     * Update Message.
+     *
+     *
+     * @OA\Put  (path="/api/update-message/{id}",
+     *     tags={"Message"},
+     *     security={{ "apiAuth": {} }},
+
+     *          @OA\Parameter(
+     *          in="query",
+     *          name="sender_id",
+     *          required=true,
+     *
+     *          @OA\Schema(type="integer"),
+     *          example="1",
+     *      ),
+     *          @OA\Parameter(
+     *          in="query",
+     *          name="id",
+     *          required=true,
+     *
+     *          @OA\Schema(type="string"),
+     *          example="1",
+     *      ),
+     *           @OA\Parameter(
+     *            in="query",
+     *            name="message",
+     *            required=true,
+     *
+     *            @OA\Schema(type="text"),
+     *            example="This is a message.",
+     *        ),
+     *
+     *      @OA\Response(
+     *          response=200,
+     *          description="success",
+     *
+     *          @OA\JsonContent(
+     *
+     *              @OA\Property(property="success", type="boolean", example="true"),
+     *               @OA\Property(property="errors", type="json", example={"message": {"Message Sent successfully."}}),
+     *          ),
+     *      ),
+     *
+     *      @OA\Response(
+     *          response=422,
+     *          description="Invalid data",
+     *
+     *          @OA\JsonContent(
+     *
+     *              @OA\Property(property="success", type="boolean", example="false"),
+     *              @OA\Property(property="errors", type="json", example={"message": {"The given data was invalid."}}),
+     *          )
+     *      )
+     * )
+     */
+
+    public function updateMessage(Request $request)
+    {
+        $message = Message::where('sender_id', auth()->id())->where('id', $request->id)->first();
+        if (!$message) {
+            return response()->json(['success' => false, 'message' => 'Message not found'], 404);
+        }
+
+        $message->update($request->only('message'));
+
+        return response()->json(['success' => true, 'message' => 'Message updated successfully', 'data' => $message]);
+    }
+
+    /**
+     * Delete Message.
+     *
+     *
+     * @OA\Delete (path="/api/delete-message/{id}",
+     *     tags={"Message"},
+     *     security={{ "apiAuth": {} }},
+
+     *          @OA\Parameter(
+     *          in="query",
+     *          name="sender_id",
+     *          required=true,
+     *
+     *          @OA\Schema(type="integer"),
+     *          example="1",
+     *      ),
+     *          @OA\Parameter(
+     *          in="query",
+     *          name="id",
+     *          required=true,
+     *
+     *          @OA\Schema(type="string"),
+     *          example="1",
+     *      ),
+     *
+     *      @OA\Response(
+     *          response=200,
+     *          description="success",
+     *
+     *          @OA\JsonContent(
+     *
+     *              @OA\Property(property="success", type="boolean", example="true"),
+     *               @OA\Property(property="errors", type="json", example={"message": {"Message Delete successfully."}}),
+     *          ),
+     *      ),
+     *
+     *      @OA\Response(
+     *          response=422,
+     *          description="Invalid data",
+     *
+     *          @OA\JsonContent(
+     *
+     *              @OA\Property(property="success", type="boolean", example="false"),
+     *              @OA\Property(property="errors", type="json", example={"message": {"The given data was invalid."}}),
+     *          )
+     *      )
+     * )
+     */
+
+    public function deleteMessage(Request $request)
+    {
+        $message = Message::where('sender_id', auth()->id())->where('id', $request->id)->first();
+
+        if (!$message) {
+            return response()->json(['success' => false, 'message' => 'Message not found'], 404);
+        }
+
+        $message->delete();
+
+        return response()->json(['success' => true, 'message' => 'Message deleted successfully']);
     }
 
 }
